syntax = "proto3";
import "shared.proto";

package server_to_proxy;

message UpdatePlayerChunkPositions {
  repeated uint64 stream = 1;
  repeated shared.ChunkPosition positions = 2;
}

// Mark the players as able to receive broadcasts.
// This is used because Broadcasts should not be sent to the player before they are in the play state.
message SetReceiveBroadcasts {
  uint64 stream = 1;
}

message BroadcastGlobal {
  bytes data = 1;
  uint64 exclude = 3;
  uint32 order = 4;
}

// Represents a local broadcast message within a specified area.
message BroadcastLocal {
  // The payload of the broadcast message.
  bytes data = 1;

  // The central point of the broadcast area.
  shared.ChunkPosition center = 3;

  // A bitmask or identifier to exclude certain entities or areas from receiving the broadcast.
  // The exact meaning depends on the application's implementation.
  uint64 exclude = 5;

  // An optional ordering value for prioritizing or sequencing broadcasts.
  // Higher values typically indicate higher priority or later sequence.
  uint32 order = 6;
}

message Multicast {
  bytes data = 1;
  repeated uint64 stream = 2;
  uint32 order = 3;
}

// Send a message to a specific player.
message Unicast {
  // The raw data to send to the player.
  bytes data = 1;
  // The player to send the message to.
  uint64 stream = 2;
  // The order in which the message should be sent to the player. This starts at 0 and increases by 1 for each message sent.
  uint32 order = 3;
}

// Flush all the queued messages. No messages will be sent over TCP to the players until flush is called. Flushing is
// important so we can combine messages into a single contiguous area in memory before sending them over TCP. This will reduce system calls.
message Flush {}

message ServerToProxy {
  oneof server_to_proxy_message {
    UpdatePlayerChunkPositions update_player_chunk_positions = 1;
    BroadcastGlobal broadcast_global = 2;
    BroadcastLocal broadcast_local = 3;
    Multicast multicast = 4;
    Unicast unicast = 5;
    SetReceiveBroadcasts set_receive_broadcasts = 6;
    Flush flush = 7;
  }
}